--- a/src/blog.html
+++ b/src/blog.html
@@ -41,7 +41,7 @@
             <section class="page__section">
                 <h1>Популярные темы</h1>
 
-                <div class="popular-blog">
+                <div class="popular-blog slider slider--type_2">
                     <div class="js-popular-blog swiper" data-slider="popular_blog">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
