--- a/src/case.html
+++ b/src/case.html
@@ -108,7 +108,9 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_2 cloud--rtl cloud--move"></div>
+
                 <h2>Трейлер</h2>
 
                 <div class="responsive-video">
@@ -117,7 +119,9 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_1 cloud--bottom cloud--rtl cloud--move"></div>
+
                 <h2>Особенности игры</h2>
 
                 <div class="features-cards-layout">
@@ -191,7 +195,9 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
+
                 <h2>Рейтинг</h2>
 
                 <div class="simple-table">
@@ -273,7 +279,7 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--section_decor_1">
                 <h2>Монетизация</h2>
 
                 <div class="big-card big-card--type_2">
