--- a/src/gamify.html
+++ b/src/gamify.html
@@ -83,7 +83,7 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--section_decor_1">
                 //= template/big-features.html
             </section>
 
@@ -125,7 +125,9 @@
                 //= template/stages.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds page__section--section_decor_1">
+                <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
+
                 <h2>Сроки разработки</h2>
 
                 <div class="big-card big-card--type_2">
@@ -181,7 +183,9 @@
                 //= template/tarifs-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_1 cloud--rtl cloud--move"></div>
+
                 //= template/faq.html
             </section>
 
@@ -195,7 +199,9 @@
                 //= template/partners-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_1 cloud--bottom cloud--ltr cloud--move"></div>
+
                 //= template/request_form.html
             </section>
         </div>
