--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -90,7 +90,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--decor_1">
+            <section class="page__section page__section--section_decor_1">
                 <h2>Наши проекты</h2>
 
                 //= template/projects-slider.html
@@ -169,7 +169,9 @@
                 //= template/services-cards-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section page__section--clouds">
+                <div class="cloud cloud--type_5 cloud--bottom cloud--ltr cloud--move"></div>
+                <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
                 //= template/faq.html
             </section>
 
