--- a/src/about.html
+++ b/src/about.html
@@ -66,9 +66,9 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_1">
-                    <div class="content-block__image">
+                    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
                         <img src="images/content/content_blocks/img_5.png" srcset="images/content/content_blocks/img_5@2x.png 2x" alt="">
                     </div>
 
@@ -88,31 +88,31 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Миссия</h2>
 
                 //= template/banners/banner_4.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Обращение СЕО и членов команды</h2>
 
                 //= template/speech-cards-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Галерея</h2>
 
                 //= template/gallery-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Наши проекты</h2>
 
                 //= template/projects-slider.html
@@ -130,7 +130,7 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <h2>Команда</h2>
@@ -151,9 +151,9 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_3">
-                    <div class="content-block__slider">
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
                         //= template/single-slider.html
                     </div>
 
@@ -177,13 +177,15 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/request_form.html
             </section>
         </div>
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
