--- a/src/blog.html
+++ b/src/blog.html
@@ -431,12 +431,13 @@
 
     //= template/common/footer.html
 
+    //= template/common/float-block.html
+
     //= template/common/popups.html
 
     //= template/common/scripts.html
 
     <script src="js/popular_blog.js"></script>
-
     <script src="js/persons_slider.js"></script>
 </body>
 
