--- a/src/case.html
+++ b/src/case.html
@@ -68,11 +68,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_4">
                     <h2>Статистика</h2>
 
-                    <div class="content-block__slider">
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
                         //= template/single-slider-2.html
                     </div>
 
@@ -108,7 +108,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_2 cloud--rtl cloud--move"></div>
 
                 <h2>Трейлер</h2>
@@ -119,13 +119,13 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_1 cloud--bottom cloud--rtl cloud--move"></div>
 
                 <h2>Особенности игры</h2>
 
                 <div class="features-cards-layout">
-                    <div class="feature-card">
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="feature-card__image">
                             <img src="images/content/features/icon_13.svg" alt="">
                         </div>
@@ -135,7 +135,7 @@
                         <p>Каждый из них обладает особыми способностями, которые стоит учитывать при планировании стратегии сражения.</p>
                     </div>
 
-                    <div class="feature-card">
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="feature-card__image">
                             <img src="images/content/features/icon_14.svg" alt="">
                         </div>
@@ -145,7 +145,7 @@
                         <p>За каждую победу над противником вы получаете очки рейтинга, а при поражении — теряете.</p>
                     </div>
 
-                    <div class="feature-card">
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="600">
                         <div class="feature-card__image">
                             <img src="images/content/features/icon_15.svg" alt="">
                         </div>
@@ -155,7 +155,7 @@
                         <p>Все персонажи обладают уникальными способностями, которые они получают по мере своего прогресса в игровом мире.</p>
                     </div>
 
-                    <div class="feature-card">
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="800">
                         <div class="feature-card__image">
                             <img src="images/content/features/icon_16.svg" alt="">
                         </div>
@@ -167,11 +167,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_3">
                     <h2>Геймплей</h2>
 
-                    <div class="content-block__slider">
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
                         //= template/single-slider.html
                     </div>
 
@@ -195,7 +195,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
 
                 <h2>Рейтинг</h2>
@@ -279,7 +279,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--section_decor_1">
+            <section class="page__section page__section--section_decor_1" data-aos="fade-up">
                 <h2>Монетизация</h2>
 
                 <div class="big-card big-card--type_2">
@@ -310,16 +310,17 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/stages.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Пайплайн</h2>
+
                 //= template/num-cards-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <h2>Команда</h2>
@@ -340,13 +341,13 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/banners/banner_3.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_1">
-                    <div class="content-block__image">
+                    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
                         <img src="images/content/content_blocks/img_8.png" srcset="images/content/content_blocks/img_8@2x.png 2x" alt="">
                     </div>
 
@@ -441,11 +442,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/request_form.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="rate">
                     <h2 class="rate__title">Оцените игру</h2>
 
@@ -486,6 +487,8 @@
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
