--- a/src/main.html
+++ b/src/main.html
@@ -49,16 +49,17 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center-desktop">Самые популярные запросы наших клиентов</h2>
 
                 //= template/links-cards-slider.html
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_1 cloud--ltr cloud--move"></div>
+
                 <div class="content-block content-block--type_1 content-block--reverse">
-                    <div class="content-block__image">
+                    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
                         <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
                     </div>
 
@@ -87,18 +88,19 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/features.html
             </section>
 
-            <section class="page__section page__section--clouds page__section--section_decor_2">
+            <section class="page__section page__section--clouds page__section--section_decor_2" data-aos="fade-up">
                 <div class="cloud cloud--type_2 cloud--ltr cloud--move"></div>
+
                 <div class="cloud cloud--type_3 cloud--bottom cloud--rtl cloud--move"></div>
 
                 //= template/why-we.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Наши проекты</h2>
 
                 //= template/projects-slider.html
@@ -116,7 +118,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_2 cloud--ltr cloud--move"></div>
 
                 <h2>Услуги</h2>
@@ -124,7 +126,7 @@
                 //= template/services-cards-slider.html
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
 
                 <h2 class="text-center-desktop">Результаты, которые говорят сами за себя</h2>
@@ -144,7 +146,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--bg">
+            <section class="page__section page__section--bg" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <div class="tabs__title is-active" data-tab="1">
@@ -181,7 +183,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_2 cloud--ltr cloud--move"></div>
 
                 <h2 class="text-center-desktop">Как мы создаем игры</h2>
@@ -189,20 +191,20 @@
                 //= template/num-cards-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/banners/banner_1.html
             </section>
 
-            <section class="page__section page__section--section_decor_3">
+            <section class="page__section page__section--section_decor_3" data-aos="fade-up">
                 //= template/technologia.html
             </section>
 
-            <section class="page__section page__section--clouds page__section--section_decor_2">
+            <section class="page__section page__section--clouds page__section--section_decor_2" data-aos="fade-up">
                 <div class="cloud cloud--type_4 cloud--ltr cloud--move"></div>
                 <div class="cloud cloud--type_3 cloud--bottom cloud--rtl cloud--move"></div>
 
                 <div class="content-block content-block--type_1">
-                    <div class="content-block__image">
+                    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
                         <img src="images/content/content_blocks/img_5.png" srcset="images/content/content_blocks/img_5@2x.png 2x" alt="">
                     </div>
 
@@ -233,7 +235,7 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center-desktop">Как мы выстраиваем работу с клиентами</h2>
 
                 <div class="features">
@@ -263,11 +265,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/banners/banner_2.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <h2 class="tabs__title is-active" data-tab="1">Мы в СМИ и соцсетях</h2>
@@ -302,17 +304,19 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/request_form.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/contacts.html
             </section>
         </div>
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
