--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -353,7 +353,7 @@
                         </div>
 
                         <div class="catalog__list">
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="200">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -399,7 +399,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="400">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -445,7 +445,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="600">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -491,7 +491,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="200">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -537,7 +537,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="400">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -583,7 +583,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="600">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -635,19 +635,19 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Прайс</h2>
 
                 //= template/trans-table.html
             </section>
 
-            <section class="page__section page__section--bg">
+            <section class="page__section page__section--bg" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <div class="tabs__title is-active" data-tab="1">
@@ -684,11 +684,15 @@
                 </div>
             </section>
 
-            //= template/request_form.html
+            <section class="page__section" data-aos="fade-up">
+                //= template/request_form.html
+            </section>
         </div>
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
