--- a/src/reviews.html
+++ b/src/reviews.html
@@ -600,6 +600,8 @@
 
     //= template/common/footer.html
 
+    //= template/common/float-block.html
+
     //= template/common/popups.html
 
     //= template/common/scripts.html
