--- a/src/author.html
+++ b/src/author.html
@@ -182,6 +182,8 @@
 
     //= template/common/footer.html
 
+    //= template/common/float-block.html
+
     //= template/common/popups.html
 
     //= template/common/scripts.html
