--- a/src/gamify.html
+++ b/src/gamify.html
@@ -61,11 +61,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_3">
                     <h2>Описание услуги</h2>
 
-                    <div class="content-block__slider">
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
                         //= template/single-slider.html
                     </div>
 
@@ -87,17 +87,17 @@
                 //= template/big-features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Сферы бизнеса, где нужна геймификация</h2>
 
                 //= template/features-cards-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="content-block content-block--type_3">
                     <h2>Описание услуги</h2>
 
-                    <div class="content-block__slider">
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
                         //= template/single-slider.html
                     </div>
 
@@ -121,11 +121,11 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/stages.html
             </section>
 
-            <section class="page__section page__section--clouds page__section--section_decor_1">
+            <section class="page__section page__section--clouds page__section--section_decor_1" data-aos="fade-up">
                 <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
 
                 <h2>Сроки разработки</h2>
@@ -156,7 +156,7 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <h2>Команда</h2>
@@ -177,29 +177,29 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Тарифы</h2>
 
                 //= template/tarifs-slider.html
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_1 cloud--rtl cloud--move"></div>
 
                 //= template/faq.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/partners-slider.html
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_1 cloud--bottom cloud--ltr cloud--move"></div>
 
                 //= template/request_form.html
@@ -208,6 +208,8 @@
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
