--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -90,7 +90,7 @@
                 </div>
             </section>
 
-            <section class="page__section page__section--section_decor_1">
+            <section class="page__section page__section--section_decor_1" data-aos="fade-up">
                 <h2>Наши проекты</h2>
 
                 //= template/projects-slider.html
@@ -108,25 +108,25 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Тарифы</h2>
 
                 //= template/tarifs-slider.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Команда</h2>
 
                 //= template/persons-slider-big.html
             </section>
 
-            <section class="page__section page__section--bg">
+            <section class="page__section page__section--bg" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <div class="tabs__title is-active" data-tab="1">
@@ -163,29 +163,32 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Дополнительные услуги</h2>
 
                 //= template/services-cards-slider.html
             </section>
 
-            <section class="page__section page__section--clouds">
+            <section class="page__section page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_5 cloud--bottom cloud--ltr cloud--move"></div>
                 <div class="cloud cloud--type_5 cloud--rtl cloud--move"></div>
+
                 //= template/faq.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/stages.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 //= template/request_form.html
             </section>
         </div>
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
