--- a/src/services-category.html
+++ b/src/services-category.html
@@ -55,8 +55,7 @@
 
                 <div class="section-text">
                     <p>С развитием технологий каждое новое открытие становится значительным шагом вперед. Современные решения находят применение в различных сферах жизни, улучшая качество и ускоряя процессы. Важно быть в курсе последних тенденций,
-                        чтобы
-                        не упустить новые возможности.</p>
+                        чтобы не упустить новые возможности.</p>
                 </div>
 
                 <div class="catalog">
@@ -379,7 +378,7 @@
                         </div>
 
                         <div class="catalog__list">
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="200">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img_2@2x.jpg 2x" alt="">
 
@@ -424,7 +423,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="400">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img_2@2x.jpg 2x" alt="">
 
@@ -469,7 +468,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="600">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -514,7 +513,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="200">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img_2@2x.jpg 2x" alt="">
 
@@ -559,7 +558,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="400">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img_2@2x.jpg 2x" alt="">
 
@@ -604,7 +603,7 @@
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <div class="card" data-aos="fade-up" data-aos-delay="600">
                                 <div class="card__image-block">
                                     <img src="images/content/catalog/img_2.jpg" srcset="images/content/catalog/img@2x.jpg 2x" alt="">
 
@@ -655,19 +654,19 @@
                 </div>
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
             </section>
 
-            <section class="page__section">
+            <section class="page__section" data-aos="fade-up">
                 <h2>Прайс</h2>
 
                 //= template/trans-table.html
             </section>
 
-            <section class="page__section page__section--bg">
+            <section class="page__section page__section--bg" data-aos="fade-up">
                 <div class="tabs">
                     <div class="title-block">
                         <div class="tabs__title is-active" data-tab="1">
@@ -704,11 +703,15 @@
                 </div>
             </section>
 
-            //= template/request_form.html
+            <section class="page__section" data-aos="fade-up">
+                //= template/request_form.html
+            </section>
         </div>
     </main>
 
     //= template/common/footer.html
+
+    //= template/common/float-block.html
 
     //= template/common/popups.html
 
