--- a/src/main.html
+++ b/src/main.html
@@ -215,19 +215,19 @@
 
                         <div class="results">
                             <div class="results__item">
-                                <h3>146</h3>
+                                <h3 class="js-count" data-duration="2000">146</h3>
                                 <p>Количество выпущенных игр<br> для разных платформ</p>
                             </div>
                             <div class="results__item">
-                                <h3>8</h3>
+                                <h3 class="js-count" data-duration="1000">8</h3>
                                 <p>Лет мы занимаемся разработкой<br> мобильных и компьютерных игр </p>
                             </div>
                             <div class="results__item">
-                                <h3>10%</h3>
+                                <h3><span class="js-count" data-duration="1000">10</span>%</h3>
                                 <p>Средний рост метрик клиентов<br> после внедрения игр</p>
                             </div>
                             <div class="results__item">
-                                <h3>146</h3>
+                                <h3 class="js-count" data-duration="2000">146</h3>
                                 <p>Количество довольных клиентов</p>
                             </div>
                         </div>
@@ -330,6 +330,7 @@
     <script src="js/num_cards_slider.js"></script>
     <script src="js/partners_slider.js"></script>
     <script src="js/articles_slider.js"></script>
+    <script src="js/counter_on_scroll.js"></script>
 </body>
 
 </html>
