--- a/src/main.html
+++ b/src/main.html
@@ -55,7 +55,7 @@
                 //= template/links-cards-slider.html
             </section>
 
-            <section class="page__section page__section--clouds" data-aos="fade-up">
+            <section class="page__section page__section--mb_24 page__section--clouds" data-aos="fade-up">
                 <div class="cloud cloud--type_1 cloud--ltr cloud--move"></div>
 
                 <div class="content-block content-block--type_1 content-block--reverse">
