--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -115,6 +115,34 @@
             </section>
 
             <section class="page__section" data-aos="fade-up">
+                <div class="content-block content-block--type_3">
+                    <h2>Как мы работаем</h2>
+
+                    <div class="content-block__slider" data-aos-delay="600" data-aos="zoom-in">
+                        //= template/single-slider.html
+                    </div>
+
+                    <div class="content-block__text">
+                        <p>Fantasy Hearts — это игра с глубоким тактическим уклоном. Здесь нужно грамотно подбирать отряды и расставлять их на арене в соответствии с поставленной целью. Задача игрока — максимально прокачать своих персонажей и занять
+                            верхнюю строчку в таблице лидеров.</p>
+
+                        <blockquote>
+                            <p>Каждая область предлагает уникальные испытания и награды. Вас ждут приключения, где каждый шаг открывает нечто новое!</p>
+                        </blockquote>
+
+                        <p><b>Ключевые особенности</b></p>
+
+                        <ul class="bullet bullet--type_1">
+                            <li>Генерация процедурных подземелий</li>
+                            <li>Глубокая кастомизация персонажа (100+ комбинаций навыков)</li>
+                            <li>PvP-арены с системой сезонных рейтингов</li>
+                            <li>Адаптивный ИИ противников</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="page__section" data-aos="fade-up">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
